The layout problem has fixed for category page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -226,5 +226,5 @@ h2 {
 
 /* header category */
 .categoriesSlideHeader .swiper.swiper-initialized {
-	margin: 0px 8px;
+	margin: 0px 10px;
 }
